--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Daily Anime</h1>
     <img src="pic.png" alt="wallpaper" id="main-pic" />
+
+     <main>
+      <h1>Daily Anime</h1>
+      <div class="sub"></div>
+     </main>
+
+    </div>
   </body>
 </html>
